--- a/public/index.html
+++ b/public/index.html
@@ -11,24 +11,24 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
-<body>
+<body ng-app='scrumApp'>
 	<div class="page-header text-center".
 		<h1>Scrum Goals</h1>
 	</div>
 
-	<div class="container">
+	<div class="container" ng-controller="entranceCtrl" ng-show="showEntrance()">
 		<div class="row">
 			<div class="col-sm-offset-2 col-sm-8">
 				<div class="row">
 
-					<div class="col-sm-5">
-						<h2>Register</h2>
-						<p>To Scrumming and Beyond!</p>
-						<form class="form-inline">
-		                    <input class="form-control" type="text" ng-model="newUsername" placeholder="Choose Username">
-		                    <input class="form-control" type="text" ng-model="newPassword" placeholder="Choose Password">
+					 <div class="col-sm-5">
+						<h2>Sign In</h2>
+						<p>Just keep scrumming, scrumming, scrumming.</p>
+						<form class="form-inline" ng-submit="#">
+		                    <input class="form-control" type="text" ng-model="username" placeholder="Username">
+		                    <input class="form-control" type="text" ng-model="password" placeholder="Password">
 		                    <br>
-		                    <input class="btn btn btn-default" type="submit" value="Register">  
+		                    <input class="btn btn-default" type="submit" value="Login">
 		                </form>
 		            </div>
 
@@ -36,23 +36,89 @@
 		            </div>
 
 		            <div class="col-sm-5">
-						<h2>Sign In</h2>
-						<p>Just keep scrumming, scrumming, scrumming.</p>
-						<form class="form-inline" ng-submit="verifyUser()">
-		                    <input class="form-control" type="text" ng-model="username" placeholder="Username">
-		                    <input class="form-control" type="text" ng-model="password" placeholder="Password">
+						<h2>Register</h2>
+						<p>To Scrumming and Beyond!</p>
+						<form class="form-inline" ng-submit="register()">
+		                    <input class="form-control" type="text" ng-model="newUsername" placeholder="Choose Username">
+		                    <input class="form-control" type="text" ng-model="newPassword" placeholder="Choose Password">
 		                    <br>
-		                    <input class="btn btn-default" type="submit" value="Login">
+		                    <input class="btn btn btn-default" type="submit" value="Register">  
 		                </form>
 		            </div>
+
 		        </div>
 		    </div>
 		</div>
 	</div>
 
+	<div class="container" ng-controller="teamCtrl" ng-show="showTeam()">.
+		<div class="row">
+			<div class="col-sm-offset-2 col-sm-8">
+				<h2 class="text-center">Thanks for Registering!</h2>
+				<div class="row">
+
+					<div class="col-sm-5">
+						<h3>Join your team</h3>
+						<p>All for scrum and scrum for all!</p>
+						<form class="form-inline" ng-submit="joinTeam()">
+		                    <input class="form-control" type="text" ng-model="teamName" placeholder="Username">
+		                    <br>
+		                    <input class="btn btn-default" type="submit" value="Join">
+		                </form>
+		            </div>
+
+		            <div class="col-sm-2">
+		            </div>
+
+		            <div class="col-sm-5">
+						<h3>Create your team</h3>
+						<p>Scrum one scrum all!</p>
+						<form class="form-inline" ng-submit="#">
+		                    <input class="form-control" type="text" ng-model="newTeamName" placeholder="Username">
+		                    <br>
+		                    <input class="btn btn-default" type="submit" value="Create">
+		                </form>
+		            </div>
+
+		        </div>
+		    </div>
+		</div>
+	</div>
+
+	<div class="container text-center" ng-controller="goalsCtrl" ng-show="showGoals()">
+		<h2>Team's Goals</h2>
+		<div class="row">
+
+			<div class="col-sm-offset-2 col-sm-8">
+				<form class="form-inline">
+					<div class="row">
+						<div class="col-sm-offset-2 col-sm-8">
+							<label for='person1'>Defeat Sephiroth:</label>
+							<select class="form-control" id="person1">
+								<option>Cloud</option>
+								<option>Tifa</option>
+							</select>
+							<hr>
+							<label for='person2'>Ride Chocobos:</label>
+							<select class="form-control" id="person2">
+								<option>Cloud</option>
+								<option>Tifa</option>
+							</select>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+
+
+
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+	<script src="app.js" type="text/javascript"></script>
 </body>
 </html>
