--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
 					 <div class="col-sm-5">
 						<h2>Sign In</h2>
 						<p>Just keep scrumming, scrumming, scrumming.</p>
-						<form class="form-inline" ng-submit="#">
+						<span class="text-danger">{{loginError}}</span>
+						<form class="form-inline" ng-submit="login()">
 		                    <input class="form-control" type="text" ng-model="username" placeholder="Username">
 		                    <input class="form-control" type="text" ng-model="password" placeholder="Password">
 		                    <br>
@@ -38,7 +39,8 @@
 		            <div class="col-sm-5">
 						<h2>Register</h2>
 						<p>To Scrumming and Beyond!</p>
-						<form class="form-inline" ng-submit="register()">
+						<span class="text-danger">{{registerError}}</span>
+						<form class="form-inline" ng-submit="checkUsername()">
 		                    <input class="form-control" type="text" ng-model="newUsername" placeholder="Choose Username">
 		                    <input class="form-control" type="text" ng-model="newPassword" placeholder="Choose Password">
 		                    <br>
