--- a/public/index.html
+++ b/public/index.html
@@ -136,38 +136,43 @@
 
 	<div class="container text-center" ng-controller="goalsCtrl" ng-show="showGoals()">
 		<h2><span>{{teamName()}}</span>'s Goals</h2>
-		<ul>
-			<li ng-repeat="goal in teamGoals()">{{goal}}</li>
-		</ul>
 
 		<div class="row" ng-show="adminView()">
+			<h4>(Admin View)</h4>
 			<div class="col-sm-offset-2 col-sm-8">
-				<form class="form-inline">
-					<div class="row">
-						<div class="col-sm-offset-2 col-sm-8">								
-							<div ng-repeat="goal in teamGoals()">
-								<label for={{goal.id}}>{{goal.goal}}</label>
-								<select class="form-control" id="goal{{goal.id}}">
-									<option ng-repeat="member in teamMembers()" value={{member.id}}>{{member.username}}</option>
-								</select>
-								<hr>
-							</div>
-							<div class="row">
-								<div class="col-sm-2">
-									<button class="btn btn-default" ng-click="#">Save</button>
-								</div>
-								<div class="col-sm-offset-2 col-sm-8">
-									<button class="btn btn-default" ng-click="addGoal()">Add Goal</button>
-									<input class="form-control" ng-model="newGoal" type="text" placeholder="Add new goal">
-								</div>
-							</div>
+				<form class="form-inline">											
+					<div class="row" ng-repeat="goal in teamGoals() | filter:{completed:false}">
+						<div class="col-sm-3">
+							<label>Complete</label>
+							<input ng-model="completedTask[goal.id]" type="checkbox" value="true">
 						</div>
+						<div class="col-sm-6">
+							<label>{{goal.goal}}</label>
+						</div>
+						<div class="col-sm-3">
+							<select ng-model="assignedUser[goal.id]" ng-options="member.username for member in teamMembers()" class="form-control">									
+							</select>
+						</div>
+						<hr>
 					</div>
+					<div class="row">
+						<div class="col-sm-2">
+							<button class="btn btn-default" ng-click="saveAdminChanges()">Save</button>
+						</div>
+						<div class="col-sm-8">
+							<button class="btn btn-default"  ng-click="addGoal()">Add Goal</button>
+							<input class="form-control" ng-model="newGoal" type="text" placeholder="Add new goal">
+						</div>
+						<div class='col-sm-2'>
+							<button class="btn btn-default" ng-click="exitToUserView()">Exit to User View</button>
+						</div>
+					</div>					
 				</form>
 			</div>
 		</div>
 
 		<div class="row" ng-show="userView()">
+			<h4>(User View)</h4>
 			<div class="col-sm-offset-2 col-sm-8">
 				<div class="row">
 					<div class="col-sm-3 userTasks" ng-repeat="member in teamMembers()">
@@ -182,10 +187,9 @@
 
 	<style>
 		.userTasks{
-			background-color:#ccc;
+			background-color:#eee;
 			min-height: 200px;
-			border: 5px solid black;
-			margin: 5px 5px;
+			border: 3px solid #ccc;
 		}
 	</style>
 
