--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 						<span class="text-danger">{{loginError}}</span>
 						<form class="form-inline" ng-submit="login()">
 		                    <input class="form-control" type="text" ng-model="username" placeholder="Username">
-		                    <input class="form-control" type="text" ng-model="password" placeholder="Password">
+		                    <input class="form-control" type="password" ng-model="password" placeholder="Password">
 		                    <br>
 		                    <input class="btn btn-default" type="submit" value="Login">
 		                </form>
@@ -42,7 +42,7 @@
 						<span class="text-danger">{{registerError}}</span>
 						<form class="form-inline" ng-submit="checkUsername()">
 		                    <input class="form-control" type="text" ng-model="newUsername" placeholder="Choose Username">
-		                    <input class="form-control" type="text" ng-model="newPassword" placeholder="Choose Password">
+		                    <input class="form-control" type="password" ng-model="newPassword" placeholder="Choose Password">
 		                    <br>
 		                    <input class="btn btn btn-default" type="submit" value="Register">  
 		                </form>
@@ -197,7 +197,9 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+	<script type="text/javascript" src="angular.min.js"></script>
+	<script type="text/javascript" src="angular-mock.js"></script>
+	<!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>-->
 	<script src="app.js" type="text/javascript"></script>
 </body>
 </html>
